2012-02-14  Valek Filippov

		* CDR: more 'bmp '.

2012-02-13  Valek Filippov

		* CDR: more 'stlt'.

2012-02-12  Valek Filippov

		* CDR: initial 'stlt'

2012-02-11  Valek Filippov

		* CDR: write down some 'txsm' findings.

2012-02-10  Valek Filippov

		* DOC: Commit vmiklos patch.

2012-02-08  Valek Filippov

		* CDR: bmpf, bmp, 0x1e for bitmaps.

2012-02-04  Valek Filippov

		* CDR: fix from Fridrich.

2012-02-03  Valek Filippov

		* CDR: impove "DISP" handling
		* VSD: some clean-up

2012-02-01  Valek Filippov

		* CDR: Added rotation centre in loda (thanks to AP);
		fixed 0x1e loda for ellipse (thanks Fridrich);
		fixed and improved 0x2af8 loda for polygon;
		fixed 0x1e for polygon;
		0x25 is path?

2012-01-31  Valek Filippov

		* ZIP: support for PKZIP and recursive load.
		* CDR: initial support for ver 14 and 15.

2012-01-29  Valek Filippov

		* CDW: parse last record.

2012-01-27  Valek Filippov

		* CDR: parse gradients part of 'fild'

2012-01-27  Valek Filippov

		* CDW: Initial support for Kompas.

2012-01-26  Valek Filippov

		* PUB: Improvements in pub98/2k 'Contents' parsing.
		* PUB: clean-up.

2012-01-25  Valek Filippov

		* PUB: start to parse 'Contents' from pub98/2k files.

2012-01-24  Valek Filippov

		* VSD: cosmetic fix for OLE in stencils.

2012-01-22  Valek Filippov

		* PUB: Some improvements in  representation an parsing of blocks.
		* VSD: Small improvement in Stylesheet for ver5 parsing

2012-01-15  Valek Filippov

		* Escher: temporary changes to look into file from fdo#43193

2012-01-14  Valek Filippov

		* CPT: ported support from cptre.

2012-01-03  Valek Filippov

		* Fixes for search in PUB.
		* Attempt to implement 'compare'.

2012-01-02  Valek Filippov

		* Added second HEX highlight (useful for Quill and CDR).
		* PUB: Quill/FDPC hex highlighting started.

2011-12-19  Valek Filippov

		* Backported 'search list dbl-click' improvement from my other tool.

2011-12-10  Valek Filippov

		* Move some common functions to "utils".