@@ -16,9 +16,10 @@
 
 import sys,struct
 
-def add_iter (hd,name,value,offset,length,vtype,offset2=0,length2=0):
-	iter = hd.hdmodel.append(None, None)
+def add_iter (hd,name,value,offset,length,vtype,offset2=0,length2=0,parent=None):
+	iter = hd.hdmodel.append(parent, None)
 	hd.hdmodel.set (iter, 0, name, 1, value,2,offset,3,length,4,vtype,5,offset2,6,length2)
+	return iter
 
 def add_pgiter (page, name, ftype, stype, data, parent = None):
 	iter1 = page.model.append (parent,None)
