@@ -1,3 +1,7 @@
+2012-02-18  Valek Filippov
+
+		* CDR: experimental 'guid'.
+
 2012-02-14  Valek Filippov
 
 		* CDR: more 'bmp '.
